deploy/manifests/deploy-play.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: play
  namespace: play
  labels:
    app: play
spec:
  replicas: 1
  selector:
    matchLabels:
      app: play
  template:
    metadata:
      labels:
        app: play
    spec:
      containers:
      - name: play
        image: us-central1-docker.pkg.dev/khan-academy/districts-jobs/khanmigogo:3098c3194989f6ba46e156934825ddfb91bd756c
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "500m"
            memory: "1Gi"
      - name: envoy
        image: envoyproxy/envoy:v1.32-latest
        ports:
        - containerPort: 8443
        resources:
          requests:
            cpu: "500m"
            memory: "1Gi"
          limits:
            cpu: "500m"
            memory: "1Gi"
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy/envoy.yaml
          subPath: envoy.yaml
        - name: play-tls
          mountPath: /etc/certs
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
      - name: play-tls
        secret:
          secretName: play-tls
