deploy/manifests/gateway-play.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: play
  namespace: play
  annotations:
    networking.gke.io/certmap: districts-play-devadmin-ssl-map
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
  addresses:
  - type: NamedAddress
    value: districts-play
