deploy/manifests/httproute-play.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: play
  namespace: play
spec:
  parentRefs:
  - kind: Gateway
    name: play
  hostnames:
          - play.khanacademy.systems
  rules:
  - backendRefs:
    - name: play
      port: 8443
